--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <div id ="strelka2"></div>
         </div>
         <nav>
-<a href="../Winter.html"> Зима </a> 
-<a href="../Весна/vesna.html"> Весна</a>
-<a href="../Осень/autumn.html"> Осень</a>
-<a href="../Лето/summer (1).html"> Лето</a>
+<a href="Winter.html"> Зима </a> 
+<a href="Весна/vesna.html"> Весна</a>
+<a href="Осень/autumn.html"> Осень</a>
+<a href="Лето/summer (1).html"> Лето</a>
     </nav>
 </main>
 </body>
